@@ -45,7 +45,10 @@
 */
 
 #include "foreign-ncol-parser.h"
-static long int mylineno;
+extern long int igraph_ncol_mylineno;
+void igraph_i_ncol_reset_scanner() {
+  YY_FLUSH_BUFFER;
+}
 %}
 
 %option noyywrap
@@ -60,7 +63,7 @@ alnum [^ \t\n]
 [ \t]*               { }
 
  /* ---------------------------------------------------newline------*/
-\n                   { mylineno++; return NEWLINE; }
+\n                   { igraph_ncol_mylineno++; return NEWLINE; }
 
  /* ----------------------------------------------alphanumeric------*/
 {alnum}+             { return ALNUM; }
